# bds-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
scripts/: list_mcp_tools.py
src/bds_mcp_server/: __init__.py  auth.py  catalog_loader.py  client.py  config.py  registry.py  server.py
src/bds_mcp_server/tools/: __init__.py  catalog_tools.py  credit_tool.py  verify_tool.py
tests/: conftest.py  test_auth_cache.py  test_credit_tool.py  test_registry.py  test_verify_tool.py
tests/fixtures/: endpoints.minimal.json
